syntax = "proto3";

package errors;

option go_package = "xgo/tests/pb/pberrors";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/cases/errors/private.proto";
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message InvalidCodecRepeated {
   repeated  int32 f_int32_numeric = 1 [ (json.field) = { format: { repeated: { elem: { int32: { codec: Numeric } } } } } ];
   repeated  int32 f_int32_string  = 2 [ (json.field) = { format: { repeated: { elem: { int32: { codec: String } } } } } ];

   repeated  int64 f_int64_numeric = 3 [ (json.field) = { format: { repeated: { elem: { int64: { codec: Numeric } } } } } ];
   repeated  int64 f_int64_string  = 4 [ (json.field) = { format: { repeated: { elem: { int64: { codec: String } } } } } ];

   repeated  uint32 f_uint32_numeric = 5 [ (json.field) = { format: { repeated: { elem: { uint32: { codec: Numeric } } } } } ];
   repeated  uint32 f_uint32_string  = 6 [ (json.field) = { format: { repeated: { elem: { uint32: { codec: String } } } } } ];

   repeated  uint64 f_uint64_numeric = 7 [ (json.field) = { format: { repeated: { elem: { uint64: { codec: Numeric } } } } } ];
   repeated  uint64 f_uint64_string  = 8 [ (json.field) = { format: { repeated: { elem: { uint64: { codec: String } } } } } ];

   repeated  sint32 f_sint32_numeric = 9 [ (json.field) = { format: { repeated: { elem: { sint32: { codec: Numeric } } } } } ];
   repeated  sint32 f_sint32_string  = 10 [ (json.field) = { format: { repeated: { elem: { sint32: { codec: String } } } } } ];

   repeated  sint64 f_sint64_numeric = 11 [ (json.field) = { format: { repeated: { elem: { sint64: { codec: Numeric } } } } } ];
   repeated  sint64 f_sint64_string  = 12 [ (json.field) = { format: { repeated: { elem: { sint64: { codec: String } } } } } ];

   repeated  sfixed32 f_sfixed32_numeric = 13 [ (json.field) = { format: { repeated: { elem: { sfixed32: { codec: Numeric } } } } } ];
   repeated  sfixed32 f_sfixed32_string  = 14 [ (json.field) = { format: { repeated: { elem: { sfixed32: { codec: String } } } } } ];

   repeated  sfixed64 f_sfixed64_numeric = 15 [ (json.field) = { format: { repeated: { elem: { sfixed64: { codec: Numeric } } } } } ];
   repeated  sfixed64 f_sfixed64_string  = 16 [ (json.field) = { format: { repeated: { elem: { sfixed64: { codec: String } } } } } ];

   repeated  fixed32 f_fixed32_numeric = 17 [ (json.field) = { format: { repeated: { elem: { fixed32: { codec: Numeric } } } } } ];
   repeated  fixed32 f_fixed32_string  = 18 [ (json.field) = { format: { repeated: { elem: { fixed32: { codec: String } } } } } ];

   repeated  fixed64 f_fixed64_numeric = 19 [ (json.field) = { format: { repeated: { elem: { fixed64: { codec: Numeric } } } } } ];
   repeated  fixed64 f_fixed64_string  = 20 [ (json.field) = { format: { repeated: { elem: { fixed64: { codec: String } } } } } ];

   repeated  float f_float_numeric = 21 [ (json.field) = { format: { repeated: { elem: { float: { codec: Numeric } } } } } ];
   repeated  float f_float_string  = 22 [ (json.field) = { format: { repeated: { elem: { float: { codec: String } } } } } ];

   repeated  double f_double_numeric = 23 [ (json.field) = { format: { repeated: { elem: { double: { codec: Numeric } } } } } ];
   repeated  double f_double_string  = 24 [ (json.field) = { format: { repeated: { elem: { double: { codec: String } } } } } ];

   repeated  bool f_bool_bool   = 25 [ (json.field) = { format: { repeated: { elem: { bool: { codec: Bool } } } } } ];
   repeated  bool f_bool_string = 26 [ (json.field) = { format: { repeated: { elem: { bool: { codec: String } } } } } ];

   repeated  string f_string_none = 31 [ (json.field) = { format: { repeated: { elem: { string: { } } } } } ];
   repeated  bytes f_bytes_none   = 32 [ (json.field) = { format: { repeated: { elem: { bytes: { } } } } } ];

   // FIXME: Add test cases.
//  // Cases for Enum
//   repeated  private.EnumNum1 f_enum_numeric        = 41 [ (json.field) = { format: { repeated: { elem: { enum: { codec: Numeric } } } } } ];
//   repeated  private.EnumNum1 f_enum_numeric_string = 42 [ (json.field) = { format: { repeated: { elem: { enum: { codec: NumericString } } } } } ];
//   repeated  private.EnumNum1 f_enum_string         = 43 [ (json.field) = { format: { repeated: { elem: { enum: { codec: EnumString } } } } } ];
//
//  // Cases for google.protobuf.Any
//   repeated  google.protobuf.Any f_any_native = 51 [ (json.field) = { format: { repeated: { elem: { any: { codec: Object } } } } } ];
//   repeated  google.protobuf.Any f_any_proto  = 52 [ (json.field) = { format: { repeated: { elem: { any: { codec: Proto } } } } } ];
//
//  // Cases for google.protobuf.Duration
//   repeated  google.protobuf.Duration f_duration_native = 61 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Object } } } } } ];
//   repeated  google.protobuf.Duration f_duration_string = 62 [ (json.field) = { format: { repeated: { elem: { duration: { codec: TimeString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_nanosecond        = 63 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Nanosecond } } } } } ];
//   repeated  google.protobuf.Duration f_duration_nanosecond_string = 64 [ (json.field) = { format: { repeated: { elem: { duration: { codec: NanosecondString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_microsecond        = 65 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Microsecond } } } } } ];
//   repeated  google.protobuf.Duration f_duration_microsecond_string = 66 [ (json.field) = { format: { repeated: { elem: { duration: { codec: MicrosecondString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_millisecond        = 67 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Millisecond } } } } } ];
//   repeated  google.protobuf.Duration f_duration_millisecond_string = 68 [ (json.field) = { format: { repeated: { elem: { duration: { codec: MillisecondString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_second        = 69 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Second } } } } } ];
//   repeated  google.protobuf.Duration f_duration_second_string = 70 [ (json.field) = { format: { repeated: { elem: { duration: { codec: SecondString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_minute        = 71 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Minute } } } } } ];
//   repeated  google.protobuf.Duration f_duration_minute_string = 72 [ (json.field) = { format: { repeated: { elem: { duration: { codec: MinuteString } } } } } ];
//
//   repeated  google.protobuf.Duration f_duration_hour        = 73 [ (json.field) = { format: { repeated: { elem: { duration: { codec: Hour } } } } } ];
//   repeated  google.protobuf.Duration f_duration_hour_string = 74 [ (json.field) = { format: { repeated: { elem: { duration: { codec: HourString } } } } } ];
//
//  // Cases for google.protobuf.Timestamp
//   repeated  google.protobuf.Timestamp f_timestamp_native      = 81 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: Object } } } } } ];
//   repeated  google.protobuf.Timestamp f_timestamp_time_layout = 82 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: TimeLayout, layout: { golang: "2006-01-02T15:04:05Z07:00" } } } } } } ];
//
//   repeated  google.protobuf.Timestamp f_timestamp_unix_nano        = 83 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixNano } } } } } ];
//   repeated  google.protobuf.Timestamp f_timestamp_unix_nano_string = 84 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixNanoString } } } } } ];
//
//   repeated  google.protobuf.Timestamp f_timestamp_unix_micro        = 85 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixMicro } } } } } ];
//   repeated  google.protobuf.Timestamp f_timestamp_unix_micro_string = 86 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixMicroString } } } } } ];
//
//   repeated  google.protobuf.Timestamp f_timestamp_unix_milli        = 87 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixMilli } } } } } ];
//   repeated  google.protobuf.Timestamp f_timestamp_unix_milli_string = 88 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixMilliString } } } } } ];
//
//   repeated  google.protobuf.Timestamp f_timestamp_unix_sec        = 89 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixSec } } } } } ];
//   repeated  google.protobuf.Timestamp f_timestamp_unix_sec_string = 90 [ (json.field) = { format: { repeated: { elem: { timestamp: { codec: UnixSecString } } } } } ];
}
